Fixed build.gradle files